--- a/saem7856/src/main/webapp/assets/css/main.css
+++ b/saem7856/src/main/webapp/assets/css/main.css
@@ -1455,9 +1455,9 @@ table {
     padding: 0.75em 0.75em; }
   table th {
     color: #3d4449;
-    font-size: 0.9em;
+    font-size: 1em;
     font-weight: 600;
-    padding: 0 0.75em 0.75em 0.75em;
+    padding: 0.75em 0.75em 0.75em 0.75em;
     text-align: left; }
   table thead {
     border-bottom: solid 2px rgba(210, 215, 217, 0.75); }
