--- a/saem7856/src/main/webapp/assets/css/main.css
+++ b/saem7856/src/main/webapp/assets/css/main.css
@@ -2025,7 +2025,8 @@ button,
       left: 0;
       position: fixed;
       top: 0;
-      z-index: 10000; }
+      z-index: 10000;
+       }
       #sidebar.inactive {
         box-shadow: none; }
       #sidebar > .inner {
