[main.css] 글꼴 수정 -ㄱㅇㄹ

--- a/saem7856/src/main/webapp/assets/css/main.css
+++ b/saem7856/src/main/webapp/assets/css/main.css
@@ -21,8 +21,34 @@ section, summary, time, mark, audio, video {
   border: 0;
   font-size: 100%;
   font: inherit;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+  font-family:'Cafe24SsurroundAir';
+}
+  @font-face {
+    font-family: 'Cafe24Ssurround';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Cafe24SsurroundAir';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24SsurroundAir.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+header > h2{
+    font-family: 'Cafe24Ssurround';	
+}
+.title-body h1, .body-title h3, .body-title h1, .title h1{
+	
+    font-family: 'Cafe24Ssurround';	
+}
 
+.btn{
+    font-family: 'Cafe24SsurroundAir';
+	
+	
+}
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block; }
